--- a/style/WisataKuliner.css
+++ b/style/WisataKuliner.css
@@ -114,6 +114,9 @@ iframe{
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
 }
+.iframe{
+    
+}
 
 .footer {
     width: 81%;
